--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link href="main.css" rel="stylesheet">
   </head>
   <script>
-    new EventSource('/esbuild').addEventListener('change', () =>
-      location.reload()
-    )
+    if (location.hostname === 'localhost' || location.hostname === '127.0.0.1') {
+      new EventSource('/esbuild').addEventListener('change', () =>
+        location.reload()
+      )
+    }
   </script>
   <body>
-    <div id="app"></div>
+    <div id="root"></div>
     <script src="main.js"></script>
   </body>
 </html>
