--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </script>
   <body>
     <div id="root"></div>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
   </body>
 </html>
