--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Blackhttps://fonts.googleapis.com/css2?family=Archivo+Black&family=Inter:wght@400;600;700&display=swapfamily=Inter:wght@400;600;700https://fonts.googleapis.com/css2?family=Archivo+Black&family=Inter:wght@400;600;700&display=swapfamily=Dancing+Script:wght@400;500;600;700https://fonts.googleapis.com/css2?family=Archivo+Black&family=Inter:wght@400;600;700&display=swapdisplay=swap" rel="stylesheet">
   </head>
   <script>
     if (location.hostname === 'localhost' || location.hostname === '127.0.0.1') {
